--- a/uControl/uControlAndroid/Resources/layout/Main.axml
+++ b/uControl/uControlAndroid/Resources/layout/Main.axml
@@ -5,22 +5,34 @@
     android:layout_height="match_parent"
     android:background="@drawable/backgnd"
     android:keepScreenOn="true">
-    <TabHost
-        android:id="@android:id/tabhost"
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
-            <TabWidget
-                android:id="@android:id/tabs"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content" />
-            <FrameLayout
-                android:id="@android:id/tabcontent"
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent" />
-        </LinearLayout>
-    </TabHost>
+        <Button
+            android:text="Setup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/openSetupBtn" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/space1"
+            android:layout_marginBottom="16.0dp" />
+        <Button
+            android:text="Weel"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/openWheelBtn"
+            android:layout_marginLeft="0.0dp" />
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="21.5dp"
+            android:id="@+id/space2" />
+        <Button
+            android:text="Custom gamepad"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/openCustomBtn" />
+    </LinearLayout>
 </FrameLayout>
