--- a/uControl/uControlAndroid/Resources/layout/ControlsBuilderLayout.axml
+++ b/uControl/uControlAndroid/Resources/layout/ControlsBuilderLayout.axml
@@ -11,7 +11,7 @@
         p3:visibility="visible"
         android:layout_marginRight="0.0dp">
         <Button
-            android:text="+ gamepad"
+            android:text="+ Create"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/addGamepadBtn" />
